# qcir-checker

./: .gitignore  CMakeLists.txt  LICENSE  Parser.cpp  Parser.h  ParserLight.cpp  ParserLight.h  README.md  Scanner.cpp  Scanner.h  checker.sh  qcir.cpp  small.qcir
Coco/: Qcir_file.cpp.atg
LAST/: Parser.cpp  Parser.cpp.old  Parser.h  Parser.h.old  Qcir_file.cpp.atg  Scanner.cpp.old
TEMP_MODS/: ParserLight.cpp  qcir.cpp
standart/: Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  qcir.cpp
